adding key layout

--- a/angular/app/login/login.html
+++ b/angular/app/login/login.html
@@ -6,8 +6,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <div class="row-fluid user-row">
-                        <center><h3>Welcome</h3></center>
-                       <center> <img src="http://i.imgur.com/rZ8xMMv.png" style="height: 120px; width: 120px;" class="img-responsive" alt="Conxole Admin"/></center>
+                        <center><h3>Log In</h3></center>
                     </div>
                 </div>
                 <div class="panel-body">
@@ -19,7 +18,7 @@
                             <input class="form-control" placeholder="Username" id="username" type="text">
                             <input class="form-control" placeholder="Password" id="password" type="password">
                             </br>
-                            <input class="btn btn-lg btn-success btn-block" type="submit" id="login" value="Login »">
+                            <input class="btn btn-lg btn-primary btn-block" type="submit" id="login" value="Login »">
                         </fieldset>
                     </form>
                 </div>
