--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,59 @@
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 
-    <script src="Public/js/app.js" type="text/javascript"></script>
+    <script src="public/js/app.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="public/css/shop-homepage.css">
+    <link rel="stylesheet" href="public/css/shop-main.css">
 </head>
-<body style="background: url(http://s18.postimg.org/l7yq0ir3t/pick8_1.jpg) repeat;">
+<body>
+    <!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" style="color: #808080;" href="#/">Adventure Store</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a style="color: #808080;" href="#/apparel">Apparel</a>
+                    </li>
+                    <li>
+                        <a style="color: #808080;" href="#/weapons">Weapons</a>
+                    </li>
+                    <li>
+                        <a style="color: #808080;" href="#/spells">Spells</a>
+                    </li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a style="color: #808080;" href="#/login">Login</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
     <div ng-view></div>
+    <div class="container">
+        <hr>
+        <!-- Footer -->
+        <footer>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>Copyright &copy; Harry Whewell 2015</p>
+                </div>
+            </div>
+        </footer>
+
+    </div>
 </body>
 </html>
