--- a/angular/app/login/login.html
+++ b/angular/app/login/login.html
@@ -12,10 +12,9 @@
                 <div class="panel-body">
                     <form accept-charset="UTF-8" role="form" class="form-signin">
                         <fieldset>
-                            <label class="panel-login">
-                                <div class="login_result"></div>
-                            </label>
-                            <input class="form-control" placeholder="Username" id="username" type="text">
+                            <label for="email">Email:</label>
+                            <input class="form-control" placeholder="Email" id="email" type="text">
+                            <label for="password">Password:</label>
                             <input class="form-control" placeholder="Password" id="password" type="password">
                             </br>
                             <input class="btn btn-lg btn-primary btn-block" type="submit" id="login" value="Login »">
