adding new services

--- a/angular/app/apparel/apparel.html
+++ b/angular/app/apparel/apparel.html
@@ -26,6 +26,7 @@
                         <h4 class="pull-right">{{apparel.price | currency :"£" }}</h4>
                         <h4>{{apparel.name}}</h4>
                         <p>{{apparel.desc}}</p>
+                        <input type="hidden" value="{{apparel.id}}" >
                         <em class="pull-right">Armour: {{apparel.armour}}</em>
                     </div>
                 </div>
