item pages pull information

--- a/angular/app/spells/spell.html
+++ b/angular/app/spells/spell.html
@@ -14,7 +14,7 @@
         </div>
         <div class="col-md-9">
             <div class="col-sm-4 col-lg-4 col-md-4" ng-repeat="spell in vm.spellList">
-                <a ng-href="#/spells/item/{{spell.ref}}">
+                <a ng-href="#/spells/{{spell.id}}">
                     <div class="thumbnail">
                         <img src="http://placehold.it/320x150" alt="">
                         <div class="caption">
