--- a/angular/app/weapons/weapon.html
+++ b/angular/app/weapons/weapon.html
@@ -20,7 +20,7 @@
         </div>
         <div class="col-md-9">
             <div class="col-sm-4 col-lg-4 col-md-4" ng-repeat="weapon in vm.weaponList">
-                <a ng-href="#/weapons/item/{{weapon.ref}}">
+                <a ng-href="#/weapons/{{weapon.id}}">
                     <div class="thumbnail">
                         <img src="http://placehold.it/320x150" alt="">
                         <div class="caption">
