--- a/angular/app/apparelItem/apparelItem.html
+++ b/angular/app/apparelItem/apparelItem.html
@@ -1,6 +1,14 @@
-<div ng-repeat="apparel in vm.apparel">
-    <h4 class="pull-right">{{apparel.price | currency :"£" }}</h4>
-    <h4>{{apparel.name}}</h4>
-    <p>{{apparel.desc}}</p>
-    <em class="pull-right">Armour: {{apparel.armour}}</em>
+<div class="col-md-8 col-md-offset-2">
+    <div class="thumbnail">
+        <img class="img-responsive" src="http://placehold.it/800x300" alt="">
+        <div class="caption-full">
+            <h4 class="pull-right">{{vm.apparelPrice| currency :"£" }}</h4>
+            <h4>{{vm.apparelName}}</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam,quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                mollit anim id est laborum</p>
+        </div>
+    </div>
 </div>
