--- a/angular/app/weaponItem/weaponItem.html
+++ b/angular/app/weaponItem/weaponItem.html
@@ -1,1 +1,14 @@
-<h1>{{vm.item_ref}}</h1>
+<div class="col-md-8 col-md-offset-2">
+    <div class="thumbnail">
+        <img class="img-responsive" src="http://placehold.it/800x300" alt="">
+        <div class="caption-full">
+            <h4 class="pull-right">{{vm.weaponPrice| currency :"£" }}</h4>
+            <h4>{{vm.weaponName}}</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam,quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                mollit anim id est laborum</p>
+        </div>
+    </div>
+</div>
