--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <title>Adventurer Store</title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="public/css/shop-homepage.css">
+    <link rel="stylesheet" href="public/css/shop-main.css">
+    <link rel="stylesheet" href="bower_components/angular-bootstrap/ui-bootstrap-csp.css">
 
     <script src="node_modules/angular/angular.js" type="text/javascript"></script>
     <script src="node_modules/angular-route/angular-route.js" type="text/javascript"></script>
-
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-
     <script src="public/js/app.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="public/css/shop-homepage.css">
-    <link rel="stylesheet" href="public/css/shop-main.css">
+    <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+
 </head>
 <body>
     <!-- Navigation -->
