--- a/angular/app/login/login.html
+++ b/angular/app/login/login.html
@@ -1,17 +1,17 @@
 <br>
 <div class="container">
-    <div class="row vertical-offset-100">
+    <div class="row">
         <br>
         <div class="col-md-4 col-md-offset-4">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <div class="row-fluid user-row">
+                    <div>
                         <center><h3>Log In</h3></center>
                     </div>
                 </div>
                 <div class="panel-body">
                     <form accept-charset="UTF-8" role="form" class="form-signin"
-                            ng-submit="vm.login(credentials)" novalidate>
+                            ng-submit="vm.login()" novalidate>
                         <fieldset>
 
                             <label for="email">Email:</label>
