--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 <body>
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
+        <div class="container" ng-controller="MainController as vm">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -46,10 +46,13 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right ">
                     <li>
-                        <a style="color: #808080;" href="#/login">Login</a>
+                        <a ng-hide="vm.isAuthed()" style="color: #808080;" href="#/login">Login</a>
                     </li>
-
+                    <li>
+                        <a ng-show="vm.isAuthed()" style="color: #808080;" ng-click="vm.logout()">Logout</a>
+                    </li>
                 </ul>
+
 
             </div>
             <!-- /.navbar-collapse -->
