adding login and logout functionality

--- a/angular/app/home/home.html
+++ b/angular/app/home/home.html
@@ -1,4 +1,7 @@
-<center><h1>Home</h1></center>
-<div ng-show="vm.isAuthed()">
-    <h2>Authorised</h2>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12 text-center">
+            <h1>Welcome {{vm.userName}}<br> to the Adventure Store!</h1>
+        </div>
+    </div>
 </div>
