--- a/angular/app/order/order.html
+++ b/angular/app/order/order.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+<center><h1>Orders</h1></center>
