--- a/angular/app/apparelItem/apparelItem.html
+++ b/angular/app/apparelItem/apparelItem.html
@@ -29,4 +29,5 @@
             <button class="btn btn-primary">Add to Order</button></div>
         </div>
     </div>
+    <review-section></review-section>
 </div>
