--- a/angular/app/spells/spell.html
+++ b/angular/app/spells/spell.html
@@ -14,7 +14,7 @@
         </div>
         <div class="col-md-9">
             <div class="col-sm-4 col-lg-4 col-md-4" ng-repeat="spell in vm.spellList">
-                <a ng-href="#/spells/{{spell.id}}">
+                <a ng-href="#/spells/{{spell.ref}}">
                     <div class="thumbnail">
                         <img ng-src="{{spell.imageUrl}}" alt="" style="height: 250px; width: 320px">
                         <div class="caption">
