--- a/angular/app/weapons/weapon.html
+++ b/angular/app/weapons/weapon.html
@@ -20,7 +20,7 @@
         </div>
         <div class="col-md-9">
             <div class="col-sm-4 col-lg-4 col-md-4" ng-repeat="weapon in vm.weaponList">
-                <a ng-href="#/weapons/{{weapon.id}}">
+                <a ng-href="#/weapons/{{weapon.ref}}">
                     <div class="thumbnail">
                         <img ng-src="{{weapon.imageUrl}}" alt="" style="height: 250px; width: 320px">
                         <div class="caption">
