--- a/angular/app/review/review-section.html
+++ b/angular/app/review/review-section.html
@@ -1,30 +1,30 @@
 <br>
-<div ng-controller="ReviewController as vm">
+<div>
     <div class="panel">
         <div class="panel-heading">
             <div>
                 <center><h3>Reviews</h3></center>
             </div>
         </div>
-        <div class="panel-body">
+        <div class="panel-body" ng-repeat="itemReview in review.reviewList">
             <blockquote>
-                <b>Stars:</b><br>
-                <p><!--Body--></p><br>
-                <cite>by: </cite><br>
+                <b>Stars: {{itemReview.stars}}</b><br>
+                <p>{{itemReview.body}}</p><br>
+                <cite>by: {{itemReview.author}}</cite><br>
             </blockquote>
         </div>
     </div>
-    <div class="panel panel-default" ng-show="vm.isAuthed()">
+    <div class="panel panel-default" ng-show="review.isAuthed()">
         <div class="panel-heading">
             <div>
                 <center><h3>Add Review</h3></center>
             </div>
         </div>
         <div class="panel-body">
-            <form name="reviewForm" novalidate>
+            <form name="reviewForm" ng-submit="review.makeReview()" novalidate>
                 <fieldset class="form-group">
                     <label for="review-star">Stars:</label>
-                    <select class="form-control" id="review-star" required>
+                    <select class="form-control" id="review-star" ng-model="review.stars" required>
                         <option value="1">1 Star</option>
                         <option value="2">2 Stars</option>
                         <option value="3">3 Stars</option>
@@ -34,11 +34,12 @@
                 </fieldset>
                 <fieldset class="form-group">
                     <label for="review-body">Review:</label>
-                    <textarea class="form-control" id="review-body" required></textarea>
+                    <textarea class="form-control" ng-model="review.body"  id="review-body" required></textarea>
                 </fieldset>
                 <fieldset class="form-group">
                     <input type="submit" class="btn btn-primary pull-right" value="Submit" />
                 </fieldset>
+
             </form>
         </div>
     </div>
